--- a/FileSystem/nbproject/private/private.properties
+++ b/FileSystem/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Documents and Settings\\Familia Melendez\\Datos de programa\\NetBeans\\7.2\\build.properties
+user.properties.file=/home/eliazar/.netbeans/6.8/build.properties
