--- a/FileSystem/nbproject/private/private.properties
+++ b/FileSystem/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=/home/eliazar/.netbeans/7.0/build.properties
+user.properties.file=C:\\Users\\Eliazar Melendez\\AppData\\Roaming\\NetBeans\\7.2\\build.properties
